Added placeholder favicon, started applying icons for phpbb page headers

--- a/forum/styles/nexus/template/mcp_header.html
+++ b/forum/styles/nexus/template/mcp_header.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE overall_header.html -->
 
-<h2>{L_MCP}</h2>
+<h2><img src="{T_THEME_PATH}/images/cp.png"><span> {L_MCP}</span></h2>
 
 <!-- IF U_MCP -->
 	<p class="linkmcp">
