--- a/forum/styles/nexus/template/ucp_header.html
+++ b/forum/styles/nexus/template/ucp_header.html
@@ -1,6 +1,6 @@
 <!-- INCLUDE overall_header.html -->
 
-<h2>{L_UCP}</h2>
+<h2><img src="{T_THEME_PATH}/images/cp.png"><span> {L_UCP}</span></h2>
 
 <div id="tabs">
 	<ul>
