--- a/forum/styles/nexus/theme/common.scss
+++ b/forum/styles/nexus/theme/common.scss
@@ -61,6 +61,14 @@ h2 {
 	color: #3f3f3f;
 	font-size: 2em;
 	margin: 0.8em 0 0.2em 0;
+	
+	> span {
+		vertical-align: middle;
+	}
+	
+	img {
+		vertical-align: middle;
+	}
 }
 
 h2.solo {
@@ -228,6 +236,7 @@ body>header {
 }
 
 .simple-copyright {
+	clear: both;
 	text-align: center;
 }
 
