--- a/forum/styles/nexus/template/overall_header.html
+++ b/forum/styles/nexus/template/overall_header.html
@@ -11,7 +11,8 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 {META}
-<title>{SITENAME} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{PAGE_TITLE}</title>
+<title>{SITENAME} &#45; <!-- IF S_IN_MCP -->{L_MCP} &#45; <!-- ELSEIF S_IN_UCP -->{L_UCP} &#45; <!-- ENDIF -->{PAGE_TITLE}</title>
+<link rel="shortcut icon" href="/favicon.ico"></link>
 
 <!-- IF S_ENABLE_FEEDS -->
 	<!-- IF S_ENABLE_FEEDS_OVERALL --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {SITENAME}" href="{U_FEED}" /><!-- ENDIF -->
@@ -24,7 +25,7 @@
 <!-- ENDIF -->
 
 <!--
-	phpBB style name: fractal
+	phpBB style name: nexus
 	Based on style:   prosilver (this is the default phpBB3 style)
 	Original author:  Tomasz Kuczak
 	Modified by:
