--- a/forum/styles/nexus/theme/content.scss
+++ b/forum/styles/nexus/theme/content.scss
@@ -313,6 +313,7 @@ div[class].topic-actions {
 	font-size: 1.6em;
 	margin-top: 20px;
 	margin-bottom: 20px;
+	padding-bottom: 0.1em;
 }
 
 .panel h3 {
