--- a/forum/styles/nexus/template/viewonline_whois.html
+++ b/forum/styles/nexus/template/viewonline_whois.html
@@ -5,7 +5,7 @@
 <div class="panel">
 	<div class="inner">
 
-	<div class="postbody"><div class="content">
+	<div class="postbody" style="float: none;"><div class="content">
 		<pre>{WHOIS}</pre>
 	</div></div>
 
