--- a/forum/styles/nexus/theme/common.scss
+++ b/forum/styles/nexus/theme/common.scss
@@ -17,6 +17,25 @@
 	text-shadow: $shadow;
 }
 
+@mixin text-shadow2($shadow, $shadow1)
+{
+	-webkit-text-shadow: $shadow, $shadow1;
+	-moz-text-shadow: $shadow, $shadow1;
+	-o-text-shadow: $shadow, $shadow1;
+	text-shadow: $shadow, $shadow1;
+}
+
+@mixin user-select($select)
+{
+	-webkit-touch-callout: $select;
+	-webkit-user-select: $select;
+	-khtml-user-select: $select;
+	-moz-user-select: $select;
+	-ms-user-select: $select;
+	user-select: $select;
+}
+$main-colour: #088A08;
+
 * {
 	/* Reset browsers default margin, padding and font sizes */
 	margin: 0;
@@ -166,29 +185,6 @@ p.right {
 /* Main blocks
 ---------------------------------------- */
 
-body>header {
-	width: 100%;
-	min-width: 860px;
-	height: 40px;
-	background: #fff;
-	@include box-shadow(0 1px 1px rgba(0, 0, 0, 0.1));
-	@include text-shadow(1px 1px 1px rgba(0, 0, 0, 0.2));
-	border-bottom: 2px solid #333333;
-	position: absolute;
-	top: 0;
-	overflow: hidden;
-	font-size: 1.2em;
-}
-
-#wrapper2 {
-	margin-left: calc(100% * 0.1);
-	margin-left: -webkit-calc(100% * 0.1);
-	margin-left: -moz-calc(100% * 0.1);
-	float: left;
-}
-
-
-
 #simple-wrap {
 	width: 100%;
 	height: 100%;
@@ -198,25 +194,53 @@ body>header {
 	}
 }
 
-#even-bigger-wrapper {
+#even-bigger-wrapper
+{
+	/*transition: width 0.25s; */
+	transition-timing-function: cubil-bezier(0,0.5,1,0.5);
 	width: 100%;
-	height: calc(100% - 42px);
-	margin-top: 42px;
+	height: 100%;
 	float: left;
 	overflow: auto;
 }
 
-#big-wrapper {
+#big-wrapper
+{
 	width: 100%;
-	height: 100%;
+	/* height: calc(100% - 40px);*/ height: 100%;
+	/* padding-top: 40px; */
 	min-width: 850px;
 }
 
-#wrapper {
+#wrapper 
+{
 	width: 80%;
-	padding-top: 20px;
-	min-height: calc(100% - 80px);
+	padding-top: 5px;
+	min-height: calc(100% - 420px); /* Full height of the logo image and the footer */
 	margin: 0 auto;
+}
+
+.welcome-img
+{
+	display: table;
+	width: 100%;
+	font-size: 100px;
+	color: white;
+	background-position: center 0;
+	background-repeat: no-repeat;
+	border-bottom: 5px solid $main-colour;
+	height: 350px;
+	margin: 0 auto;
+	
+	div
+	{
+		width: 100%;
+		text-align: center;
+		display: table-cell;
+		height: 350px;
+		vertical-align: middle;
+		@include text-shadow2(0 0 20px rgba(0, 0, 0, 1),0 0 20px rgba(0, 0, 0, 0.5));
+	}
 }
 
 #page-body {
@@ -251,70 +275,167 @@ body>header {
 /* Top bar
 --------------------------------------------- */
 
-.site-logo {
-	width: 30px;
-	height: 30px;
-	padding: 5px 5px 5px 0;
-	display: inline-block;
-	vertical-align: top;
+#header
+{
+	height: 70px;
+	position: absolute;
+	top: 0;
+	overflow: hidden;
+	font-size: 1.2em;
+	z-index: 1;
 }
 
-.menu {
+.hex
+{
+	@include user-select(none);
+	transition: padding-top 0.25s, background 0.25s;
+	transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+    width: 60px;
+    height: 30px;
+    background-color: #fff; 
+    position: relative;   
+    > div
+	{	
+    	height: 52px;
+    	width: 100%;
+    	background-image: url("{T_THEME_PATH}/images/arrow1hover.svg");
+    	background-position: 0% 30px;
+    	background-repeat: no-repeat; 
+	}
+	
+	> div:after {
+		transition: opacity 0.25s;
+		transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+		content: "";
+		width: 60px;
+		height: 52px;
+		background-image: url("{T_THEME_PATH}/images/arrow1.svg");
+    	background-position: 0% 30px;
+    	background-repeat: no-repeat; 
+		position: absolute;
+		left: 0;
+		opacity: 1;
+	}
+	img
+	{
+  		width: 40px;
+  		height: 40px;
+  		padding: 0 5px;
+  		display: inline-block;
+  		position: relative;
+  		z-index: 2;
+  		vertical-align: top; 
+  	}
+    
+}
+
+.hex:hover
+{
+	padding-top: 15px;
+	background-color: #a6d5a6;
+	
+	> div:after
+	{
+		opacity: 0;
+	}
+}
+
+.menu 
+{
 	list-style: none;
-	display: inline-block;
 	vertical-align: top;
 	padding-left: 0;
+	margin-left: -2px;
 	
-	li {
+	li
+	{
 		display: inline-block;
+		max-width: 60px;
+		max-height: 40px;
+		margin: 0px 2px;
+		text-align: center;
+		vertical-align: top;
 	}
 	
-	a {
+	a
+	{
 		display: inline-block;
-		line-height: 40px;
-		padding: 0 10px;
-		color: inherit;
+    	transition: color 0.25s;
+		transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+    	line-height: 40px; 
+    	max-width: 60px;
+    	max-height: 40px;
+    	text-decoration: none;
 	}
 
-	a:hover {
-	cursor: pointer;
-	background-color: #333333;
-	color: #fff;
+	a:hover 
+	{
+		cursor: pointer;
+		background: $main-colour;
+		color: #fff;
+		text-decoration: none;
 	}
 }
 
-.username {
-	width: 250px;
+#usr-nav-reference
+{
+	transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+	width: 275px;
 	height: 40px;
-	float: right;
-	text-align: center;
-	font-weight: bold;
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 101;
+	overflow: hidden;
 	
-	div {
-		height: 40px;
-		max-width: 250px;
-		margin: 0 auto;
-		display: inline-block;
-		padding: 0 5px;
+	.hex
+	{
+		transition: margin-left 0.25s, background 0.25s;
+		transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+  		width: 255px;
+   		height: 40px;
+    	margin-left: 30px;
+    	
+    	> div
+		{
+			width: 271px;
+			height: 40px;
+    		background-image: url("{T_THEME_PATH}/images/arrow2hover.svg");
+    		background-position: 0px 0%;
+    		position: absolute;
+    		left: -16px;
+		}
+		> div:after 
+		{
+			width: 271px;
+			height: 40px;
+			background-image: url("{T_THEME_PATH}/images/arrow2.svg");
+			background-position: 0px 0%;
+		}
 	}
-	
-	div:hover {
+
+	.hex:hover
+	{
+		margin-left: 20px;
+		padding-top: 0;
 		cursor: pointer;
-		background-color: #333333;
-		color: #fff;
 	}
-	
-	div:hover span {
-		text-decoration: underline;
-	}
-	
-	span {
+}
+
+#usr-nav-name, #usr-nav-reference
+{
+	text-align: center;
+	span 
+	{
 		line-height: 40px;
 		vertical-align: top;
 		padding-right: 5px;
+		font-weight: bold;
+		font-size: 1.2em;
 	}
 	
-	img {
+	img
+	{
 		image-rendering: optimizeSpeed;
 		image-rendering: -moz-crisp-edges;
 		image-rendering: -webkit-optimize-contrast;
@@ -326,48 +447,89 @@ body>header {
 		padding: 5px;
 	}
 }
-
 /* User sidebar
 --------------------------------------------- */
 
+/*
+ * User sidebar
+ */
+ 
 #usr-nav {
-	width: 250px;
-	height: calc(100% - 42px);
+	transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+	width: 0;
+	height: 100%; 
 	z-index: 100;
-	overflow: auto;
-	position: fixed;
-	display: none;
-	right: -250px;
-	top: 42px;
+	overflow-y: auto;
+	overflow-x: hidden;
+	position: absolute;
+	top: 0;
+	right: 0;
 	background: #4f4f4f;
 	@include box-shadow(-1px 0 1px rgba(0, 0, 0, 0.1));
 	color: #c9c9c9;
-	line-height: 1.3em;
+	
+	hr {
+		width: calc(100% - 20px);
+		margin-left: 10px;
+		margin-rigth: 10px;
+		height: 1px;
+		@include box-shadow(0px 1px 1px rgba(0,0,0,0.1))
+	}
 }
 
-#usr-nav hr {
-	width: 100%;
-	border: 0;
-	height: 1px;
+#usr-nav-name
+{
+	position: relative;
+
+	.heex
+	{
+		width: 13px;
+		height: 30px;
+		margin: 5px;
+    	margin-right: 15px;
+    	position: absolute;
+    	top: 0;
+    	right: 0;
+    	background-image: url("{T_THEME_PATH}/images/arrow3.svg");
+	}
+}
+
+#usr-nav-name:hover
+{
+	cursor: pointer;
+	background: #444444;
 }
 
 .sep {
-	background-color: #333333;
+	border: 0 none #FFFFFF;
+	height: 1px;
+	margin: 5px 0;
+	display: block;
+	clear: both;
+	background-color: $main-colour;
 	@include box-shadow(0 1px 1px rgba(255, 255, 255, 0.05));
 }
 
 #usr-nav-wrap {
-	padding: 0 10px;
+	width: 250px;
+	height: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .usr-nav-section {
-	padding: 10px 0;
+	padding: 5px 0;
 	width: 100%;
+	font-size: 12px;
 
 	h3 {
+		font-family: Arial, Helvetica, sans-serif;
+		font-weight: bold;
+		text-transform: uppercase;
+		font-size: 1.05em;
 		color: #e0e0e0;
 		text-align: center;
-		border: none;
+		border-bottom: none;
 		margin: 0;
 		padding: 0;
 	}
@@ -380,7 +542,7 @@ body>header {
 
 	table {
 		border-collapse: collapse;
-		margin: 10px 0 0 0;
+		margin: 10px 10px 0 10px;
 	}
 
 
@@ -392,15 +554,52 @@ body>header {
 		width: 50%;
 	}
 	
+	h3, li, td, div.more {
+		height: 20px;
+		span {line-height: 20px}
+	}
+	
+	h3, li
+	{
+		span {
+			line-height: 20px;
+			vertical-align: middle;
+		}
+		
+		img {
+			padding: 1px 0;
+			vertical-align: middle;
+		}
+	}
+	
+	li {
+		padding: 0 10px;
+	}
+	
+	li:hover, div.more:hover
+	{
+		background: #444444;
+	}
+	
+	li.nohighlight:hover
+	{
+		background: none;
+	}
+	
+	.cookie-issue {
+		padding: 0 10px;
+	}
+	
 	a:link, a:visited, a:hover, a:active {
 		color: #c9c9c9;
+		text-decoration: none;
 	}
 
 }
 
 .more {
+	margin-top: 5px;
 	text-align: center;
-	padding-top: 10px;
 }
 
 .down-img {
