Improved support for possible other languages in the future.

--- a/forum/styles/nexus/template/overall_footer.html
+++ b/forum/styles/nexus/template/overall_footer.html
@@ -20,7 +20,7 @@
 </div>
 </div> 
 
-<div id="footer">Copyright (C) 2013. The design is property of Tomasz Kuczak and should not be copied. This site is powered by <a href="http://joomla.org">Joomla!</a> CMS and <a href="http://www.phpbb.com">phpBB</a> forum.
+<div id="footer">{S_COPYRIGHT}
 		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 </div>
@@ -35,8 +35,8 @@
 
 <div id="bottom-bar">
 	<ul>
-		<li id="cookie-info">We use cookies to improve your experience with the site. If you want to disable them please refer to your web browser's documentation.<span onclick="hideCookieInfo()">X</span></li>
-		<li id="old-browser-info">It seems that you have outdated browser and the site may not work properly. Please update it to get all of the features this site offers. If you use Internet Explorer on Windows XP or older please install other browser.<span onclick="hideOldBrowserInfo()">X</span></li>
+		<li id="cookie-info">{S_COOKIE_INFO}<span onclick="hideCookieInfo()">X</span></li>
+		<li id="old-browser-info">{S_OLD_BROWSER}<span onclick="hideOldBrowserInfo()">X</span></li>
 	</ul>
 </div>
 <script type="text/javascript" src="{T_THEME_PATH}/scripts/bottomBar.js"></script> 
