--- a/forum/styles/nexus/template/overall_header.html
+++ b/forum/styles/nexus/template/overall_header.html
@@ -100,11 +100,11 @@
 
 <div id="even-bigger-wrapper">
 <div id="big-wrapper">
-<div style="background-image: url('{T_THEME_PATH}/images/logo_big.png');" class="welcome-img"><div>the Fractal Network</div></div>
+<div style="background-image: url('{T_THEME_PATH}/images/logo_big.png');" class="welcome-img"><div>{S_TITLE}</div></div>
 <div id="wrapper">
 	<div id="header"> 
 		<ul class="menu">
-			<li><a href="{U_HOME}"><div class="hex"><div><img alt="Home" src="{T_THEME_PATH}/images/logo.png"></div></div></a></li><li><a href="{U_INDEX}" accesskey="h"><div class="hex"><div>{L_FORUM}</div></div></a></li><!-- IF not S_IS_BOT --><!-- IF S_DISPLAY_MEMBERLIST --><li><a href="{U_MEMBERLIST}" title="{L_MEMBERLIST_EXPLAIN}"><div class="hex"><div>{L_MEMBERLIST}</div></div></a></li><!-- ENDIF --><!-- IF not S_USER_LOGGED_IN and S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) --><li class="icon-register"><a href="{U_REGISTER}"><div class="hex"><div>{L_REGISTER}</div></div></a></li><!-- ENDIF --><!-- IF not S_USER_LOGGED_IN --><li><a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x"><div class="hex"><div>{L_LOGIN_LOGOUT}</div></div></a></li><!-- ENDIF --><!-- ENDIF -->
+			<li><a href="{U_HOME}"><div class="hex"><div><img alt="{S_HOME}" src="{T_THEME_PATH}/images/logo.png"></div></div></a></li><li><a href="{U_INDEX}" accesskey="h"><div class="hex"><div>{L_FORUM}</div></div></a></li><!-- IF not S_IS_BOT --><!-- IF S_DISPLAY_MEMBERLIST --><li><a href="{U_MEMBERLIST}" title="{L_MEMBERLIST_EXPLAIN}"><div class="hex"><div>{S_PLAYERS}</div></div></a></li><!-- ENDIF --><!-- IF not S_USER_LOGGED_IN and S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) --><li class="icon-register"><a href="{U_REGISTER}"><div class="hex"><div>{L_REGISTER}</div></div></a></li><!-- ENDIF --><!-- IF not S_USER_LOGGED_IN --><li><a href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x"><div class="hex"><div>{L_LOGIN_LOGOUT}</div></div></a></li><!-- ENDIF --><!-- ENDIF -->
 		</ul>
 	</div>
 	<a id="top" name="top" accesskey="t"></a>
